[package]
name = "struct-tools-derive"
version = "0.2.0"
authors = ["Tim Ruland"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/LPTimey/struct-tools-derive.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.107", features = ["extra-traits", "full"]}
quote = "1.0.23"
itertools = "0.10.5"