[package]
name = "struct-tools-derive"
version = "0.5.3"
authors = ["Tim Ruland"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/LPTimey/struct-tools-derive.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.10", features = ["extra-traits", "full"]}
proc-macro2 = "1.0.54"
quote = "1.0.26"
itertools = "0.10.5"
